--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <main>
     <div id="container">
-      <div id="robbot">
-        <img id="robbot-img" src="assets/img/robbots/bumblee/bumblee-1.png" />
-        <h2 id="robbot-name">Bumblee</h2>
+      <div id="robot">
+        <img id="robot-img" src="" />
+        <h2 id="robot-name">Bumblee</h2>
       </div>
       <div id="statuses">
         <div class="status">
