mais robôs, valores matematicamente mais coerentes, ajuste de pequenos bugs e mudanças pequenas na interface

--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
       </div>
       <div id="statuses">
         <div class="status">
-          <h3 id="level">Level: <span id="level-points"></span></h3>
+          <h3 id="level">lvl: <span id="level-points"></span></h3>
         </div>
-        <div class="status">
-          <h3 id="hp">hp: <span id="hp-points"></span></h3>
-          <button type="button" id="increase-hp-button" class="increase-button">
-            <i class="bi bi-plus-lg"></i>
-          </button>
+        <div id="main-statuses">
+          <div class="status">
+            <h3 id="hp">hp: <span id="hp-points"></span></h3>
+            <button type="button" id="increase-hp-button" class="increase-button">
+              <i class="bi bi-plus-lg"></i>
+            </button>
+          </div>
+          <div class="status">
+            <h3 id="atk">atk: <span id="atk-points"></span></h3>
+            <button type="button" id="increase-atk-button" class="increase-button">
+              <i class="bi bi-plus-lg"></i>
+            </button>
+          </div>
+          <div class="status">
+            <h3 id="def">def: <span id="def-points"></span></h3>
+            <button type="button" id="increase-def-button" class="increase-button">
+              <i class="bi bi-plus-lg"></i>
+            </button>
+          </div>
+          <div class="status">
+            <h3 id="spd">spd: <span id="spd-points"></span></h3>
+            <button type="button" id="increase-spd-button" class="increase-button">
+              <i class="bi bi-plus-lg"></i>
+            </button>
+          </div>
         </div>
-        <div class="status">
-          <h3 id="atk">atk: <span id="atk-points"></span></h3>
-          <button type="button" id="increase-atk-button" class="increase-button">
-            <i class="bi bi-plus-lg"></i>
-          </button>
-        </div>
-        <div class="status">
-          <h3 id="def">def: <span id="def-points"></span></h3>
-          <button type="button" id="increase-def-button" class="increase-button">
-            <i class="bi bi-plus-lg"></i>
-          </button>
-        </div>
-        <div class="status">
-          <h3 id="spd">spd: <span id="spd-points"></span></h3>
-          <button type="button" id="increase-spd-button" class="increase-button">
-            <i class="bi bi-plus-lg"></i>
-          </button>
-        </div>
-        <h3 id="points">Points: <span id="points-points"></span></h3>
+        <h3 id="points">pts: <span id="points-points"></span></h3>
       </div>
     </div>
   </main>
