adicionado funcionalidade de mostrar quando status chega ao nível máximo

--- a/index.html
+++ b/index.html
@@ -17,30 +17,43 @@
         <h2 id="robot-name">Bumblee</h2>
       </div>
       <div id="statuses">
-        <div class="status">
+        <div class="wrap">
           <h3 id="level">lvl: <span id="level-points"></span></h3>
+          <span class="max hidden" id="max-lvl">(max)</span>
         </div>
         <div id="main-statuses">
           <div class="status">
-            <h3 id="hp">hp: <span id="hp-points"></span></h3>
+            <div class="wrap">
+              <h3 id="hp">hp: <span id="hp-points"></span></h3>
+              <span class="max hidden" id="max-hp">(max)</span>
+            </div>
             <button type="button" id="increase-hp-button" class="increase-button">
               <i class="bi bi-plus-lg"></i>
             </button>
           </div>
           <div class="status">
-            <h3 id="atk">atk: <span id="atk-points"></span></h3>
+            <div class="wrap">
+              <h3 id="atk">atk: <span id="atk-points"></span></h3>
+              <span class="max hidden" id="max-atk">(max)</span>
+            </div>
             <button type="button" id="increase-atk-button" class="increase-button">
               <i class="bi bi-plus-lg"></i>
             </button>
           </div>
           <div class="status">
-            <h3 id="def">def: <span id="def-points"></span></h3>
+            <div class="wrap">
+              <h3 id="def">def: <span id="def-points"></span></h3>
+              <span class="max hidden" id="max-def">(max)</span>
+            </div>
             <button type="button" id="increase-def-button" class="increase-button">
               <i class="bi bi-plus-lg"></i>
             </button>
           </div>
           <div class="status">
-            <h3 id="spd">spd: <span id="spd-points"></span></h3>
+            <div class="wrap">
+              <h3 id="spd">spd: <span id="spd-points"></span></h3>
+              <span class="max hidden" id="max-spd">(max)</span>
+            </div>
             <button type="button" id="increase-spd-button" class="increase-button">
               <i class="bi bi-plus-lg"></i>
             </button>
