refatorado, melhorando a modelagem dos dados

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="container">
       <div id="robot">
         <img id="robot-img" src="" />
-        <h2 id="robot-name">Bumblee</h2>
+        <h2 id="robot-name"></h2>
       </div>
       <div id="statuses">
         <div class="wrap">
