fix: corrijido erroos na interface e outros

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transformers</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
@@ -24,18 +28,14 @@
             <li class="stats__stat-wrapper">
               <p>Vida: <span class="stats__value stats__hp"></span></p>
               <button class="stats__increase-button stats__increase-hp-button">
-                <i>
-                  <img src="img/plus-circle-fill.svg" alt="" />
-                </i>
+                <i class="bi bi-plus-circle-fill"></i>
               </button>
               <span class="stats__max stats__max-hp">(máx)</span>
             </li>
             <li class="stats__stat-wrapper">
               <p>Ataque: <span class="stats__value stats__atk"></span></p>
               <button class="stats__increase-button stats__increase-atk-button">
-                <i>
-                  <img src="img/plus-circle-fill.svg" alt="" />
-                </i>
+                <i class="bi bi-plus-circle-fill"></i>
               </button>
               <span class="stats__max stats__max-atk">(máx)</span>
             </li>
@@ -45,18 +45,14 @@
                 <span class="stats__value stats__def"></span>
               </p>
               <button class="stats__increase-button stats__increase-def-button">
-                <i>
-                  <img src="img/plus-circle-fill.svg" alt="" />
-                </i>
+                <i class="bi bi-plus-circle-fill"></i>
               </button>
               <span class="stats__max stats__max-def">(máx)</span>
             </li>
             <li class="stats__stat-wrapper">
               <p>Velocidade: <span class="stats__value stats__spd"></span></p>
               <button class="stats__increase-button stats__increase-spd-button">
-                <i>
-                  <img src="img/plus-circle-fill.svg" alt="" />
-                </i>
+                <i class="bi bi-plus-circle-fill"></i>
               </button>
               <span class="stats__max stats__max-spd">(máx)</span>
             </li>
